Fixed external link alignment. Set link colour.

--- a/Web/Features/layout/layout.less
+++ b/Web/Features/layout/layout.less
@@ -5,6 +5,10 @@
 
     md-icon {
         vertical-align: bottom;
+
+        &.external-link {
+            vertical-align: super;
+        }
     }
 
     .menu {
